The small changes

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -336,7 +336,7 @@
       <u><br>
         Notes for Visual C++ users</u><br>
       <br>
-      Disable pre-compiled headers before starting compilation. Old Visual C++
+      Disable precompiled headers before starting compilation. Old Visual C++
       users can do it via the project creation wizard.<br>
       Visual C++ 2017 or higher users must follow these steps:<br>
       <br>
@@ -3045,6 +3045,7 @@
       9.6.5: The source code synced with the Black game development kit 7.5.1.<br>
       9.6.5.1: The documentation has been updated.<br>
       9.6.6: The source code synced with the Black game development kit 7.5.2.<br>
+      9.6.7: The small changes.<br>
     </big>
   </body>
 </html>
