The small changes

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2842,7 +2842,7 @@
       6.8: The small changes.<br>
       6.8.1: The ordinary sprite subsystem has improved.<br>
       6.8.2: The small changes.<br>
-      6.8.3: An audio subsystem replaces the multimedia subsystem<br>
+      6.8.3: An audio subsystem replaces the multimedia subsystem.<br>
       6.8.4: The image loader has improved.<br>
       6.8.5: The rendering performance has increased.<br>
       6.8.6: The audio subsystem has improved.<br>
@@ -3045,7 +3045,7 @@
       9.6.5: The source code synced with the Black game development kit 7.5.1.<br>
       9.6.5.1: The documentation has been updated.<br>
       9.6.6: The source code synced with the Black game development kit 7.5.2.<br>
-      9.6.7: The small changes.<br>
+      9.6.7-9.6.8: The small changes.<br>
     </big>
   </body>
 </html>
