The base graphics subsystem has improved

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -465,6 +465,8 @@
         unsigned int Screen::get_height() const; -</i> Return the screen height
       in pixels.<br>
       <i><br>
+        unsigned int Screen::get_rate() const; -</i> Return the screen refresh rate.<br>
+      <i><br>
         bool Screen::check_x(const unsigned int x) const; -</i> Return true if
       the x-coordinate is valid.<br>
       <br>
@@ -3046,6 +3048,7 @@
       9.6.5.1: The documentation has been updated.<br>
       9.6.6: The source code synced with the Black game development kit 7.5.2.<br>
       9.6.7-9.6.8: The small changes.<br>
+      9.6.9: The base graphics subsystem has improved.<br>
     </big>
   </body>
 </html>
