The documentation has been updated

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -474,11 +474,11 @@
       the y-coordinate is valid.<br>
       <br>
       <i>bool Screen::check_horizontal_border(const EUGENEGDK::BOX target)
-        const; -</i> Return true if a game object is collided with the
+        const; -</i> Return true if a game object has collided with the
       horizontal screen border.<br>
       <br>
       <i>bool Screen::check_vertical_border(const EUGENEGDK::BOX target) const;
-        -</i> Return true if a game object is collided with the vertical screen
+        -</i> Return true if a game object has collided with the vertical screen
       border.<br>
       <br>
       <i>Screen *Screen::get_handle(); -</i> Return the handle to the base
@@ -1410,11 +1410,11 @@
       Set the camera offset.<br>
       <br>
       <i>bool Camera::check_horizontal_border(const EUGENEGDK::BOX target)
-        const; -</i> Return true if a game object is collided with the
+        const; -</i> Return true if a game object has collided with the
       horizontal visible area border.<br>
       <i><br>
         bool Camera::check_vertical_border(const EUGENEGDK::BOX target) const; -</i>
-      Return true if a game object is collided with the vertical visible area
+      Return true if a game object has collided with the vertical visible area
       border.<br>
       <i><br>
         void Camera::update(); -</i> Update the camera.<br>
@@ -3049,6 +3049,7 @@
       9.6.6: The source code synced with the Black game development kit 7.5.2.<br>
       9.6.7-9.6.8: The small changes.<br>
       9.6.9: The base graphics subsystem has improved.<br>
+      9.6.9.1: The documentation has been updated.<br>
     </big>
   </body>
 </html>
