--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2631,7 +2631,7 @@
       2.6.7: The small changes.<br>
       2.6.8: The primitive subsystem has improved.<br>
       2.6.9: The small bug has been fixed.<br>
-      2.7: The primitive subsystem removed.<br>
+      2.7: The primitive subsystem was removed.<br>
       2.7.1-2.7.6: The preview release of the next branch.<br>
       2.7.7: The public release of the next branch.<br>
       2.7.8-2.7.9: The small changes.<br>
@@ -2750,7 +2750,7 @@
       5.3.1-5.3.4: The small changes.<br>
       5.3.5: The new subsystem has been added.<br>
       5.3.6: The small changes.<br>
-      5.3.7: The tile-set subsystem removed.<br>
+      5.3.7: The tile-set subsystem was removed.<br>
       5.3.8: The small changes.<br>
       5.3.9: The sprite sheet subsystem has improved.<br>
       5.4-5.4.1: The small changes.<br>
@@ -2851,9 +2851,9 @@
       6.8.7: The small changes.<br>
       6.8.8-6.9.1: The gamepad subsystem has improved.<br>
       6.9.2: The small changes.<br>
-      6.9.3: The source code synced with the the Neon game development kit 6.2.6.<br>
+      6.9.3: The source code synced with the Neon game development kit 6.2.6.<br>
       6.9.4: The sprite sheet subsystem has improved.<br>
-      6.9.5: The source code synced with the the Neon game development kit 6.3.4.<br>
+      6.9.5: The source code synced with the Neon game development kit 6.3.4.<br>
       6.9.6: The source code synced with the Gray game development kit 2.5.7.<br>
       6.9.7: The gamepad support has improved.<br>
       6.9.8: The source code synced with the Gray game development kit 2.6.<br>
@@ -3049,7 +3049,7 @@
       9.6.6: The source code synced with the Black game development kit 7.5.2.<br>
       9.6.7-9.6.8: The small changes.<br>
       9.6.9: The base graphics subsystem has improved.<br>
-      9.6.9.1: The documentation has been updated.<br>
+      9.6.9.1-9.6.9.2: The documentation has been updated.<br>
     </big>
   </body>
 </html>
