The documentation has been updated

--- a/documentation/reference.htm
+++ b/documentation/reference.htm
@@ -2686,7 +2686,7 @@
       4.0.4: The collision detection subsystem has improved.<br>
       4.0.5-4.0.6: The small changes.<br>
       4.0.7: The new internal subsystem has been added.<br>
-      4.0.8: The small changes in engine core.<br>
+      4.0.8: The small changes in the engine core.<br>
       4.0.9: The image loader has improved.<br>
       4.1: The keyboard input has improved.<br>
       4.1.1: The small bug in the image loader has improved.<br>
@@ -3049,7 +3049,7 @@
       9.6.6: The source code synced with the Black game development kit 7.5.2.<br>
       9.6.7-9.6.8: The small changes.<br>
       9.6.9: The base graphics subsystem has improved.<br>
-      9.6.9.1-9.6.9.2: The documentation has been updated.<br>
+      9.6.9.1-9.6.9.3: The documentation has been updated.<br>
     </big>
   </body>
 </html>
